2012-05-14  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* use odoc_xref tags for doc links into other libraries

2012-03-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix assertion in callback

2012-03-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* internal documentation complete

2012-03-07  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* lots of internal documentation

2012-03-06  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* ignore overridden methods warning as long as we support 3.11
	* check-doc makefile goal
	* add minimal support for HOL Light
	* add and fix some doc comments

2012-01-29  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* unescaped string end-of-line warning

2012-01-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* structured copyright
	* doc-base entry

2012-01-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* try watch again

2012-01-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* try watch again

2012-01-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* try out-of-date-standards-version

2012-01-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* try lintian possible-documentation,
	  Debian-watch-file-is-missing,
	  out-of-date-standards-version

2012-01-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* prepare debian/changelog for next release

2012-01-04  Hendrik Tews <prooftree@askra.de>

	* release version 0.9 on 2012-01-04 20:39:05 UTC

2012-01-04  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2012-01-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix debian/changelog

2012-01-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix case where some existential is instantiated with
	  the last proof command
	* protocol change
	  - rename proof-complete into proof-finished and add
	    existential info
	  - add proof-complete message

2012-01-03  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* release version 0.8 on 2012-01-03 10:11:10 UTC

2012-01-03  Hendrik Tews <prooftree@askra.de>
