@@ -35,6 +35,13 @@ a img {
  ! - <P></P></LI>
  ! - </UL>
   -->
+<DT>XXXX-XX-XX
+<DD>
+<UL>
+<LI>bug fixes and internal changes
+<P></P></LI>
+</UL>
+
 <DT>2012-01-04: Prooftree 0.9 released
 <DD>
 <UL>
@@ -58,6 +65,8 @@ instantiated
 <P></P></LI>
 </UL>
 
+<!-- RECENT CHANGES END -->
+
 <DT>2011-11-01
 <DD>
 <UL>
@@ -74,8 +83,6 @@ sequent and proof command displays</LI>
 <LI>several bug fixes
 <P></P></LI>
 </UL>
-
-<!-- RECENT CHANGES END -->
 
 <DT>2011-10-04
 <DD>
@@ -157,7 +164,7 @@ far as possible)
 <HR noshade size=2>
 <FONT SIZE="-2">
 last changed on 
-<!-- hhmts start --> 4 Jan 2012
+<!-- hhmts start -->14 May 2012
 <!-- hhmts end -->
 by <A HREF="/index.html.en">Hendrik</A>
 </FONT></BODY> </HTML>
