@@ -7,11 +7,21 @@
 # This special exception was added by Craig Small in version 0.37 of dh-make.
 
 # Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+export DH_VERBOSE=1
+export DH_OPTIONS=-v 
+
+include /usr/share/ocaml/ocamlvars.mk
+
+# This has to be exported to make some magic below work.
+export DH_OPTIONS
 
 %:
-	dh $@ 
+	dh $@ --with ocaml
 
 .PHONY: override_dh_auto_configure
 override_dh_auto_configure:
 	./configure --prefix /usr
+
+.PHONY: override_dh_gencontrol
+override_dh_gencontrol:
+        dh_gencontrol -- -VF:OCamlABI="$(OCAML_ABI)"
